0.8.0a13: Better loading of initial settings from new devices.
0.8.0a12: Use new MQTT backend
0.8.0a11: Add random user agent support.
0.8.0a10: Don't request resources for Wirefree doorbells.
0.8.0a9: Support IMAP port.
         Don't request resources for Essential cameras.
0.8.0a8: Don't ping Pro 3 floodlight.
0.8.0a7: Don't ping Essential and Pro 4 cameras.
         Stop when asked to.
0.8.0a6: Fixed schedule handling.
         Handle events in the background thread.
0.8.0a5: Update token to map to email address
         Save last video details
         Don't signal unless information has really changed
0.8.0a4: Add GO camera support.
         Fixed header issue.
0.8.0a3: Save authentication token.
0.8.0a2: Support quoted printable in Arlo 2fa emails
         Fix connected capability for video door bell.
0.8.0a1: New version after split from hass-aarlo.

0.7.1b13: Merge to hass-aarlo b13
0.7.1b11: Merge to hass-aarlo b11
0.7.1b9: Add cloudscraper support.
0.7.1b7: Allow removal of unicode characters from entity ids
        Siren on wired doorbell.
        Better doorbell icon.
0.7.1b6: Add new event handling
        Allow custimisable disarmed mode
0.7.1b5: Don't rely on camera reporting back idle status
0.7.1b4: Smart user agents.
0.7.1b1: Add media download.
0.7.0.18: Update user agent and request headers.
0.7.0.6: Stop battery drain on any battery based base station.
0.7.0.4: Handle broken modes fetch.
0.7.0.2: Make mode refresh optional.
0.7.0: Added PUSH support for authentication.
        Fixed missing stream state.
0.7.0.beta.7 Fix imap error handling.
        Allow ids to be used in mode update.
0.7.0.beta.6 Fix mode update.
0.7.0.beta.5 Fix mode update.
        Fix possible log in issue.
0.7.0.beta.4 Support base reset
        Better snapshot handling.
0.7.0.beta.2 Remove duplicate connection tracker.
        Better backtrace in backend processes.
		Fix crash in mode 1 setting.
0.7.0.beta.1 Add switches to turn off doorbell chimes.